changed hover properties and  box shadow on all stretch cards, and fixed stretch banner

--- a/client/src/components/finding-a-stretch/FindingAStretch.css
+++ b/client/src/components/finding-a-stretch/FindingAStretch.css
@@ -15,11 +15,35 @@
 }
 
 .category-card {
-  filter: drop-shadow(3px 6px 5px #c0bfbf);
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   margin: 50px 15px;
+  transition: transform 0.1s;
+}
+.category-card::after {
+  content: '';
+  border-radius: 5px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.category-card:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.1);
+}
+
+.category-card:hover::after {
+  opacity: 1;
 }
 
 .card-deck {
@@ -131,6 +155,32 @@
   display: flex;
   flex-wrap: wrap;
   margin: 20px 10px;
+  transition: transform 0.1s;
+}
+
+.stretch-modal-cards::after {
+  content: '';
+  border-radius: 5px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.stretch-modal-cards:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.1);
+}
+
+.stretch-modal-cards:hover::after {
+  opacity: 1;
 }
 
 .stretch-card-container {
